--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -1,6 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WindowsFormsApp1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <WindowsFormsApp1.Properties.Settings>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Email" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Tel" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Picture" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="First_Name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Chat_Color" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Chat_Font" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Chat_Font_Size" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Chat_Font_Style" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Host" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="User" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Pass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="dbName" serializeAs="String">
+                <value />
+            </setting>
+        </WindowsFormsApp1.Properties.Settings>
+    </userSettings>
 </configuration>
