--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm_Contact_Profile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Contact_Profile.Designer.cs">
+      <DependentUpon>frm_Contact_Profile.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Edit_Profile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frm_Contact_Profile.resx">
+      <DependentUpon>frm_Contact_Profile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_Edit_Profile.resx">
       <DependentUpon>frm_Edit_Profile.cs</DependentUpon>
     </EmbeddedResource>
