--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frm_Chat_Main.Designer.cs">
       <DependentUpon>frm_Chat_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Private_Message.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Private_Message.Designer.cs">
+      <DependentUpon>frm_Private_Message.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Profile_Picture.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Chat_Main.resx">
       <DependentUpon>frm_Chat_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Private_Message.resx">
+      <DependentUpon>frm_Private_Message.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Profile_Picture.resx">
       <DependentUpon>frm_Profile_Picture.cs</DependentUpon>
